--- a/Pages/contactanos.html
+++ b/Pages/contactanos.html
@@ -41,9 +41,16 @@
                 <input type="email" name="correo" placeholder="Agrega tu e-mail">
                 <br>
                 <br>
+            <fieldset>
+                <legend>Escribe tus comentarios</legend>
+                <textarea name="comentario" id="comentario" cols="30" rows="10"></textarea>
+            </fieldset>
+            <br>
+            <br>
             </form>
             <form action="">
                 <input type="submit" value="Enviar"> <!--/*Falta popup afirmando que se mando*/-->
+                <input type="reset" value="Borrar"> <!--/*Falta popup afirmando que se borro*/-->
             </form>
     </main>
 
