--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NutriDays</title>
-    <!--<link rel="stylesheet" href="./estilos.css">  /*Extra*/ -->
+    <link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
-    <header>
-    <nav>
-        <h1><strong> NutriDays </strong></h1>
-        <ul class="menu">
-            <li><strong><a href="Pages/nosotros.html">Nosotros</a></strong></li>
-            <li><strong><a href="Pages/registro.html">Registro</a></strong></li>
-            <li><strong><a href="Pages/nutricion.html">Nutrición</a></strong></li>
-            <li><strong><a href="Pages/progreso.html">Progreso</a></strong></li>
-            <li><strong><a href="Pages/contactanos.html">Contáctanos</a></strong></li>
-        </ul>
-        </nav>
+    <header class="headermenu">
+            <figure></figure>
+            <div>
+                <ul class="headermenulista">
+                    <li><strong><a href="Pages/nosotros.html">Nosotros</a></strong></li>
+                    <li><strong><a href="Pages/registro.html">Registro</a></strong></li>
+                    <li><strong><a href="Pages/nutricion.html">Nutrición</a></strong></li>
+                    <li><strong><a href="Pages/progreso.html">Progreso</a></strong></li>
+                    <li><strong><a href="Pages/contactanos.html">Contáctanos</a></strong></li>
+                </ul>
+            </div>
     </header>
 
-    <main class="forma">
+    <main>
     <!--Extra
         <div class="forma__cubo">
             <div class="forma__cubo--miniatura"></div>
@@ -29,22 +29,23 @@
         <div class="forma__circulo"></div>
         <div class="forma__cubo--verde"></div>
         <div class="forma__cubo"></div>  /*Extra*/ -->
-    <hr>
-    <div>
-    <h1>Bienvenidos a NutriDays</h1>
-    <h1>Nosotros</h1>
-    <a href="#mas_nosotros">Ir a más de nosotros</a>
-    <br>
-    <img src="./Recursos/Nosotros/1.jfif" alt="">
-    <h2 id="mas_nosotros" style="color: blue;"Nosotros 2></h2>
-    <h3>Nosostros 2</h3>
-    <h3>Nosostros 3</h3>
-    <h4>Nosostros 4</h4>
-    <h5>Nosostros 5</h5>
-    <h6>Nosostros 6</h6>
+        <hr>
+    <section class="containermain">
+    <div class="containermain item1containermain">
+            <h1 id="Ir_a_Inicio"></h1>Bienvenidos a NutriDays</h1>
+            <h1>Nosotros</h1>
+            <a href="#mas_nosotros">Ir a más de nosotros</a>
+            <br>
+            <img src="./Recursos/Nosotros/1.jfif" alt="">
+            <h2 id="mas_nosotros" style="color: blue;"Nosotros 2></h2>
+            <h3>Nosostros 2</h3>
+            <h3>Nosostros 3</h3>
+            <h4>Nosostros 4</h4>
+            <h5>Nosostros 5</h5>
+            <h6>Nosostros 6</h6>
     </div>
         <hr>
-        <div>
+        <div class="containermain item2containermain">
         <h1>Registro</h1>
         <a href="#mas_registro">Ir a más de Registros</a>
         <br>
@@ -57,7 +58,7 @@
         <h6>Registro 6</h6>
         </div>
             <hr>
-            <div>
+            <div class="containermain item3containermain">
             <h1>Nutrición</h1>
             <a href="#mas_nutricion">Ir a más de Nutricion</a>
             <br>
@@ -70,6 +71,7 @@
             <h6>Nutrición 6</h6>
             </div>
                 <hr>
+                <div class="containermain item4containermain">
                 <h1>Progreso</h1>
                 <a href="#mas_progreso">Ir a más de tu Progreso</a>
                 <br>
@@ -82,7 +84,7 @@
                 <h6>Progreso 6</h6>
                 </div>
                     <hr>
-                    <div>
+                    <div class="containermain item5containermain">
                     <h1>Contáctanos</h1>
                     <a href="#mas_contactanos">Ir a más de Contáctanos</a>
                     <br>
@@ -94,12 +96,16 @@
                     <h6>Contáctanos 5</h6>
                     <h6>Contáctanos 6</h6>
                     </div>
+        </section>    
     </main>
 
     <footer>
         <hr>
+        <div class="footer">
+        <button><a href="#Ir_a_Inicio"><strong>Ir a Inicio</strong></a></button>
+        <hr>
         <p>Siguenos en </p>
-        <ul class="footer">
+        <ul>
             <li>
                <h4><a href="https://www.facebook.com/"><strong> @nutridays.com </strong></a><span><img src="Recursos/Footer/facebook.png" alt=""></span>
                </h4>
@@ -120,8 +126,8 @@
                 </h4>
                 </li>
             <br>
-        </ul>     
+        </ul>
+        </div>
     </footer>
-
 </body>
 </html>
